log
Thu 21 Apr 2022 09:26:37 PM UTC: 
 tests:  1|8
total_score: 0/70
861bc8e
Fri 22 Apr 2022 03:13:38 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
34161b7
Fri 22 Apr 2022 03:14:03 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b99b9a3
Fri 22 Apr 2022 03:28:42 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:12: error: comparison of distinct pointer types lacks a cast [-Werror]
   82 |     if(key < tree->current){
      |            ^
treemap.c:89:14: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   89 |   return tree->current;
      |          ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e46b43d
Fri 22 Apr 2022 03:34:11 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
e94e6d6
Fri 22 Apr 2022 03:34:59 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4be5fe3
Fri 22 Apr 2022 03:36:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d2be48f
Fri 22 Apr 2022 03:40:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:40: error: expected ‘)’ before ‘{’ token
   79 |     if(is_equal(tree,key,tree->current){
      |       ~                                ^
      |                                        )
treemap.c:87:3: error: expected expression before ‘}’ token
   87 |   }
      |   ^
Compilation failed
2e96175
Fri 22 Apr 2022 03:41:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
50f7082
Fri 22 Apr 2022 03:42:08 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
eb07f4d
Fri 22 Apr 2022 03:42:40 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:5: error: expected ‘,’ or ‘;’ before ‘if’
   84 |     if(v==1){
      |     ^~
treemap.c:86:6: error: ‘else’ without a previous ‘if’
   86 |     }else{
      |      ^~~~
treemap.c:83:9: error: unused variable ‘v’ [-Werror=unused-variable]
   83 |     int v=tree->lower_than(key,tree->current)
      |         ^
cc1: all warnings being treated as errors
Compilation failed
68060bb
Fri 22 Apr 2022 03:43:35 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:5: error: expected ‘,’ or ‘;’ before ‘if’
   84 |     if(ama==1){
      |     ^~
treemap.c:86:6: error: ‘else’ without a previous ‘if’
   86 |     }else{
      |      ^~~~
treemap.c:83:9: error: unused variable ‘ama’ [-Werror=unused-variable]
   83 |     int ama = tree->lower_than(key,tree->current)
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
9a5aa80
Fri 22 Apr 2022 03:43:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c74fffc
Fri 22 Apr 2022 03:49:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
707fb31
Fri 22 Apr 2022 03:50:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2123186
Fri 22 Apr 2022 03:52:49 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
99f7e23
Mon 25 Apr 2022 02:56:39 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|6
total_score: 15/70
b1e896d
Mon 25 Apr 2022 03:24:59 AM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:9: error: ‘resultado’ undeclared (first use in this function)
   64 |     if( resultado==1){
      |         ^~~~~~~~~
treemap.c:64:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:65:23: error: ‘TreeNode’ has no member named ‘nuevoNodo’
   65 |       tree->root->left->nuevoNodo;
      |                       ^~
Compilation failed
eb59006
Mon 25 Apr 2022 03:25:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:9: error: ‘resultado’ undeclared (first use in this function)
   64 |     if( resultado==1){
      |         ^~~~~~~~~
treemap.c:64:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e7343bd
Mon 25 Apr 2022 03:25:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ef1f3df
Mon 25 Apr 2022 03:28:17 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
63d301d
Mon 25 Apr 2022 03:29:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:70:10: error: ‘TreeMap’ has no member named ‘node’
   70 |   if(tree->node==NULL)tree->root=nuevoNodo;
      |          ^~
Compilation failed
f06bc80
Mon 25 Apr 2022 03:29:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0136782
Mon 25 Apr 2022 03:30:50 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:76:3: error: implicit declaration of function ‘whilr’ [-Werror=implicit-function-declaration]
   76 |   whilr(x->left!=NULL){
      |   ^~~~~
treemap.c:76:23: error: expected ‘;’ before ‘{’ token
   76 |   whilr(x->left!=NULL){
      |                       ^
      |                       ;
treemap.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8cde561
Mon 25 Apr 2022 03:31:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1834007
Mon 25 Apr 2022 03:34:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5c2d467
Mon 25 Apr 2022 03:37:10 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:7: error: redefinition of ‘resultado’
   63 |   int resultado = tree->lower_than(key,tree->root->pair->key);
      |       ^~~~~~~~~
treemap.c:51:7: note: previous definition of ‘resultado’ was here
   51 |   int resultado = tree->lower_than(key,tree->root->pair->key);
      |       ^~~~~~~~~
Compilation failed
facbb22
Mon 25 Apr 2022 03:37:56 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4be2b4
Mon 25 Apr 2022 03:38:37 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:7: error: redefinition of ‘resultado’
   63 |   int resultado = tree->lower_than(key,tree->root->pair->key);
      |       ^~~~~~~~~
treemap.c:51:7: note: previous definition of ‘resultado’ was here
   51 |   int resultado = tree->lower_than(key,tree->root->pair->key);
      |       ^~~~~~~~~
Compilation failed
0a2ae86
Mon 25 Apr 2022 03:39:02 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a61d448
Mon 25 Apr 2022 03:49:38 AM UTC: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 15/70
6ea34d1
Mon 25 Apr 2022 03:50:54 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
cfb0016
Mon 25 Apr 2022 03:51:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
6a7c0ae
Mon 25 Apr 2022 03:53:37 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 15/70
e7b06cb
Mon 25 Apr 2022 03:55:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
603bd24
Mon 25 Apr 2022 03:56:26 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 15/70
d4c1786
Mon 25 Apr 2022 03:58:30 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
5e63f45
